--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     </head>
     <body>
         <button>fix</button>
+        <div class="slide-container">
+            <input type="range" min="8" max="100" value="16" class="slider">
+        </div>
         <div id="grid-container"></div>
     </body>
 </html>
