--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <button>fix</button>
         <div class="slide-container">
-            <input type="range" min="8" max="100" value="16" class="slider">
+            <input type="range" min="2" max="100" value="16" class="slider" id="slider">
         </div>
         <div id="grid-container"></div>
     </body>
